fixed word-wrap

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -190,6 +190,11 @@ header{
   margin: 0 .5rem 1rem 0;
 }
 
+.overlap{
+  width: 200px;
+  word-wrap: break-word;
+}
+
 @media screen and (max-width: 768px) {
   .cart {
     position: relative;
